fix: reduce min-height for contact page featured image on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -179,7 +179,7 @@ body {
   opacity: 1;
   margin: 0;
   width: 100%;
-  min-height: 75vh;
+  min-height: 50vh;
 
   &.hidden {
     opacity: 0;
